test/tests/stages/18_structures/invalid_types/invalid_struct_declaration/invalid_self_reference.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  struct
  identifier(s)
  {
  int
  identifier(x)
  ;
  struct
  identifier(s)
  identifier(y)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
